syntax = "proto3";

option go_package = ".;grpcgen";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "date.proto";
import "location.proto";

message Message {
    string id = 1;
    string text = 2;
    Role role = 3;
    google.protobuf.Timestamp sent_at = 4;
    google.protobuf.StringValue client_id = 5;
    LocationAnalysis location_analysis = 6;
}

message MessageChunk {
    string message_id = 1;
    string text = 2;
    Role role = 3;
    google.protobuf.Timestamp sent_at = 4;
    google.protobuf.StringValue client_id = 5;
    bool is_last = 6;
}

message LocationAnalysis {
    repeated AnalyzedLocation locations = 1;
    google.protobuf.Timestamp analyzed_at = 2;
    google.protobuf.StringValue error = 3;
}

message AnalyzedLocation {
    string text = 1;
    Location location = 2;
}

enum Role {
    UNKNOWN = 0;
    USER = 1;
    OTOMO = 2;
}

message MonthlySentCount {
    YearMonth year_month = 1;
    int32 count = 2;
    repeated DailySentCount daily_sent_count = 3;
}

message DailySentCount {
    Date date = 1;
    int32 count = 2;
}

message ReminingSendCount {
    ReminingMonthlySendCount monthly = 1;
    ReminingDailySendCount daily = 2;
}

message ReminingMonthlySendCount {
    YearMonth year_month = 1;
    int32 count = 2;
}

message ReminingDailySendCount {
    Date date = 1;
    int32 count = 2;
}
